# sorix_os

./: Cargo.toml  LINKER_BACKUP  compile_bootloader.sh  compile_kernel.sh  link.ld
bootloader/: Cargo.toml
bootloader/src/: dir_management.rs  main.rs
bootloader/src/elf_loading/: mod.rs
bootloader/src/utils/: framebuffer.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/src/drawing/: characters.rs  fonts.rs  mod.rs
kernel/src/kernel/: ahci.rs  mod.rs  page_heap.rs  pci.rs  prelude.rs  serial_io.rs  string_api.rs
kernel/src/kernel/ahci/: cmd_management.rs  mod.rs
